###################################################################################
################## Butianyun QT Video Lesson V2 ###################################
########### BUTIANYUN， QT Programming Trainning Professional ######################
####################################################################################


cmake_minimum_required(VERSION 3.5)
project(alpaca VERSION 0.1 LANGUAGES CXX)
add_subdirectory(src)
add_subdirectory(examples EXCLUDE_FROM_ALL)
