###################################################################################
################## Butianyun QT Video Lesson V2 ###################################
########### BUTIANYUN， QT Programming Trainning Professional ######################
####################################################################################


project(examples VERSION 0.1 LANGUAGES CXX)
add_subdirectory(UseButianyunFileSystemModelWidgets)
add_subdirectory(UseButianyunFileSystemModelQML)
